# metaquity-network-node

./: .dockerignore  .gitattributes  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml  rustfmt.toml  zombienet.sh
.github/workflows/: build.yml  check.yml  release.yml
docs/: rust-setup.md
node/: Cargo.toml
node/chain-specs/: devnet.json  devnet.raw.json  metaquity-rococo-testnet.json  metaquity-rococo-testnet.raw.json  metaquity.json  metaquity.raw.json  testnet.json  testnet.raw.json
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/asset-registry/: Cargo.toml
pallets/asset-registry/src/: benchmarking.rs  lib.rs  mock.rs  test.rs  weights.rs
pallets/identity/src/: lib.rs
pallets/motion/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs
runtime/devnet/: Cargo.toml
runtime/devnet/src/: lib.rs
runtime/mainnet/: Cargo.toml
runtime/mainnet/src/: lib.rs  xcm_config.rs
runtime/src/: lib.rs
scripts/: pre-commit.sh
zombienet-config/: rococo-local-config.toml
