[profile.release]
panic = "unwind"

[workspace]
members = ["node", "runtime"]
resolver = "2"

[workspace.package]
authors = ["Metaquity Limited <hello@metaquity.xyz>"]
edition = "2021"
homepage = "https://metaquity.xyz/"
license = "Unlicense"
repository = "https://github.com/Metaquity-Network/metaquity-network-node"
