[package]
name = "metaquity-network-runtime"
# SBP-M1 review: consider resetting version as new project
version = "4.0.0-dev"
# SBP-M1 review: update description
description = "A fresh FRAME-based Substrate node, ready for hacking."
# SBP-M1 review: add metaquity as author
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
# SBP-M1 review: set homepage
homepage = "https://substrate.io/"
edition = "2021"
license = "Unlicense"
publish = false
# SBP-M1 review: update to 'https://github.com/Metaquity-Network/metaquity-network-node'
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# SBP-M1 review: consider updating dependencies to new monorepo at https://github.com/paritytech/polkadot-sdk (where applicable, and when ready to move to 1.0)
[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
# SBP-M1 review: update version
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# nft dependencies
pallet-nft-fractionalization = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.43"}
pallet-nfts = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v0.9.43" }

# pallets added
pallet-assets = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
pallet-identity = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
pallet-utility = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}

# template pallets
pallet-aura = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
pallet-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true ,  branch = "polkadot-v0.9.43"}
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
frame-executive = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
sp-block-builder = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
sp-consensus-aura = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
sp-consensus-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.43" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
sp-version = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}

# Used for the node's RPCs
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v0.9.43"}

# Used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true,  branch = "polkadot-v0.9.43"}
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true ,  branch = "polkadot-v0.9.43"}

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true,  branch = "polkadot-v0.9.43"}

[features]
default = ["std"]
std = [ "frame-try-runtime?/std",
        "frame-system-benchmarking?/std",
        "frame-benchmarking?/std",
        # SBP-M1 review: separate line
        "codec/std", "scale-info/std", 
        "frame-executive/std", 
        "frame-support/std", 
        "frame-system-rpc-runtime-api/std",
        "frame-system/std",
        "frame-try-runtime/std",
        "pallet-aura/std",
        "pallet-balances/std",
        "pallet-grandpa/std",
        "pallet-identity/std",
        "pallet-sudo/std",
        "pallet-timestamp/std",
        "pallet-transaction-payment-rpc-runtime-api/std",
        "pallet-transaction-payment/std",
        # SBP-M1 review: consider sorting alphabetically along with other pallet-* above
        "pallet-assets/std",
        "pallet-nfts/std",
        "pallet-nft-fractionalization/std",
        "sp-api/std",
        "sp-block-builder/std",
        "sp-consensus-aura/std",
        "sp-consensus-grandpa/std",
        "sp-core/std",
        "sp-inherents/std",
        "sp-offchain/std",
        "sp-runtime/std",
        "sp-session/std",
        "sp-std/std",
        "sp-transaction-pool/std",
        "sp-version/std",
        "substrate-wasm-builder",
        # SBP-M1 review: group with pallets above
        "pallet-utility/std"
        ]
runtime-benchmarks = [
        "frame-benchmarking/runtime-benchmarks",
        "frame-support/runtime-benchmarks",
        "frame-system-benchmarking/runtime-benchmarks",
        "frame-system/runtime-benchmarks",
        "pallet-balances/runtime-benchmarks",
        "pallet-grandpa/runtime-benchmarks",
        "pallet-timestamp/runtime-benchmarks",
        "sp-runtime/runtime-benchmarks",
        # SBP-M1 review: group with pallets above
        "pallet-nft-fractionalization/runtime-benchmarks",
        ]
try-runtime = [
        "frame-try-runtime/try-runtime",
        "frame-executive/try-runtime",
        "frame-system/try-runtime",
        "frame-support/try-runtime",
        "pallet-aura/try-runtime",
        "pallet-balances/try-runtime",
        "pallet-grandpa/try-runtime",
        "pallet-sudo/try-runtime",
        "pallet-timestamp/try-runtime",
        "pallet-transaction-payment/try-runtime",
        # SBP-M1 review: consider sorting alphabetically
        "pallet-nft-fractionalization/try-runtime",
        ]
