[package]
name = "metaquity-network-runtime"
version = "0.1.0"
# SBP-M1 review: update description
description = "Metaquity Network runtime"
# SBP-M1 review: add metaquity as author
authors = ["Metaquity Network <https://www.metaquity.xyz/>"]
# SBP-M1 review: set homepage
homepage = "https://www.metaquity.xyz/"
edition = "2021"
license = "Unlicense"
publish = false
# SBP-M1 review: update to 'https://github.com/Metaquity-Network/metaquity-network-node'
repository = "https://github.com/Metaquity-Network/metaquity-network-node"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# SBP-M1 review: consider updating dependencies to new monorepo at https://github.com/paritytech/polkadot-sdk (where applicable, and when ready to move to 1.0)
[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
# SBP-M1 review: update version
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# nft dependencies
pallet-nft-fractionalization = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v1.0.0"}
pallet-nfts = {version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", default-features = false, branch = "polkadot-v1.0.0" }

# pallets added
pallet-assets = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
pallet-identity = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
pallet-utility = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}

# template pallets
pallet-aura = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
pallet-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true ,  branch = "polkadot-v1.0.0"}
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
frame-executive = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
sp-block-builder = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
sp-consensus-aura = { version = "0.10.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
sp-consensus-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
sp-core = { version = "21.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
sp-runtime = { version = "24.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
sp-std = { version = "8.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v1.0.0" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
sp-version = { version = "22.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}

# Used for the node's RPCs
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git",  branch = "polkadot-v1.0.0"}

# Used for runtime benchmarking
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true,  branch = "polkadot-v1.0.0"}
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true ,  branch = "polkadot-v1.0.0"}

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", optional = true,  branch = "polkadot-v1.0.0"}

[features]
default = ["std"]
std = [ 
        # SBP-M1 review: separate line
        "codec/std", "scale-info/std", 

        "frame-benchmarking?/std",
        "frame-executive/std", 
        "frame-support/std", 
        "frame-system-benchmarking?/std",
        "frame-system-rpc-runtime-api/std",
        "frame-system/std",
        "frame-try-runtime/std",
        "frame-try-runtime?/std",

        # SBP-M1 review: consider sorting alphabetically along with other pallet-* above
        "pallet-assets/std",
        "pallet-aura/std",
        "pallet-balances/std",
        "pallet-grandpa/std",
        "pallet-identity/std",
        "pallet-nft-fractionalization/std",
        "pallet-nfts/std",
        "pallet-sudo/std",
        "pallet-timestamp/std",
        "pallet-transaction-payment-rpc-runtime-api/std",
        "pallet-transaction-payment/std",
        # SBP-M1 review: group with pallets above
        "pallet-utility/std",

        "sp-api/std",
        "sp-block-builder/std",
        "sp-consensus-aura/std",
        "sp-consensus-grandpa/std",
        "sp-core/std",
        "sp-inherents/std",
        "sp-offchain/std",
        "sp-runtime/std",
        "sp-session/std",
        "sp-std/std",
        "sp-transaction-pool/std",
        "sp-version/std",
        "substrate-wasm-builder",
        ]
runtime-benchmarks = [
        "frame-benchmarking/runtime-benchmarks",
        "frame-support/runtime-benchmarks",
        "frame-system-benchmarking/runtime-benchmarks",
        "frame-system/runtime-benchmarks",
        "pallet-balances/runtime-benchmarks",
        "pallet-grandpa/runtime-benchmarks",
        # SBP-M1 review: group with pallets above
        "pallet-nft-fractionalization/runtime-benchmarks",
        "pallet-sudo/runtime-benchmarks",
        "pallet-timestamp/runtime-benchmarks",
        "sp-runtime/runtime-benchmarks",
        ]
try-runtime = [
        "frame-executive/try-runtime",
        "frame-support/try-runtime",
        "frame-system/try-runtime",
        "frame-try-runtime/try-runtime",
        "pallet-aura/try-runtime",
        "pallet-balances/try-runtime",
        "pallet-grandpa/try-runtime",
        # SBP-M1 review: consider sorting alphabetically
        "pallet-nft-fractionalization/try-runtime",
        "pallet-sudo/try-runtime",
        "pallet-timestamp/try-runtime",
        "pallet-transaction-payment/try-runtime",
        ]
